# Ultra-Fast-Millisecond-News-TUI-in-Rust

./: Cargo.toml  README.md  install.sh  manage.sh  sources.toml  uninstall.sh  update.sh
DOCS/: ARCHITECTURE.md
src/: app.rs  cleanser.rs  config.rs  db.rs  db.rs.orig  db.rs.rej  fetcher.rs  fetcher.rs.broken  main.rs  scraper.rs  sources.rs  ui.rs
