[package]
name = "live_news_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
crossterm = "0.29.0"
directories = "6.0.0"
feed-rs = "2.3.1"
html2md = "0.2.15"
log = "0.4.33"
ratatui = "0.30.2"
reqwest = { version = "0.13.4", features = ["rustls", "json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
